chat word wrap and break fixed

--- a/app/assets/stylesheets/chat_messages.css.scss
+++ b/app/assets/stylesheets/chat_messages.css.scss
@@ -61,11 +61,7 @@
     -moz-text-align:justify;
     -ms-word-wrap: break-word;
     word-wrap: break-word;
-    word-break: break-all;word-wrap: break-word;
-    -moz-text-align:justify;
-    -ms-word-wrap: break-word;
-    word-wrap: break-word;
-    word-break: break-all;
+    word-break: break-word;
 }
 .MessageInner>p{
 	margin: 0px 0px 0px;
